--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 header {
-    background-color: black;
+    background-color:white;
     height: 5rem;
 
     display: flex;
@@ -10,7 +10,7 @@ header {
     padding: 0 1.5rem;
 }
 header a {
-    color: #ffffff;
+    color:black;
     font-size: 2rem;
     font-weight: 500;
 }
