--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,7 @@ header {
 header a {
     color:white;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 300;
 }
 
 
@@ -47,6 +47,26 @@ margin-left: 35rem;
 .frase{
     display: flex;
     position: absolute;
-    top:60rem; 
-    margin-left: 20rem;
+    top:50rem; 
+    margin-left: 15rem;
+}
+.botón{
+    display: flex;
+    position: absolute;
+    top:80rem; 
+    margin-left: 30rem;
+    background-color: black;
+    border-radius: 8rem;
+    width:35rem;
+    height: 9.5rem;
+  
+}
+.botón p{
+    color:white;
+    font-size: 4rem;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    text-align: center;
+    margin-top: 2rem;
+    margin-left: 6.5rem;
 }
