--- a/css/home.css
+++ b/css/home.css
@@ -50,7 +50,7 @@ margin-left: 35rem;
     top:50rem; 
     margin-left: 15rem;
 }
-.botón{
+.boton{
     display: flex;
     position: absolute;
     top:80rem; 
@@ -61,7 +61,7 @@ margin-left: 35rem;
     height: 9.5rem;
   
 }
-.botón p{
+.boton p{
     color:white;
     font-size: 4rem;
     font-family: 'Inter', sans-serif;
