--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,11 @@
 body{
     background: rgb(163,3,104);
 background: linear-gradient(0deg, rgba(163,3,104,1) 0%, rgba(0,0,0,1) 100%);
+width: 100%;
+height: 100vh;
+background-repeat:repeat-x;
+
+
 }
 
 header {
@@ -38,6 +43,7 @@ div img{
     margin-left: 110rem;
     margin-top: 21rem;
 }
+
 .logo{
 display: flex;
 position: absolute;
